# rust_api

./: .env  .env copy  Cargo.toml  readmi.md
src/: main.rs
src/config/: mod.rs
src/controllers/: user_controller.rs
src/models/: user.rs
src/routes/: api.rs
